Loan Collection List success with API response

--- a/app/src/main/res/layout/activity_loan_collection.xml
+++ b/app/src/main/res/layout/activity_loan_collection.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.test.npa_flow.loan_collection.LoanCollectionViewModel" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -58,225 +65,24 @@
                 android:layout_height="@dimen/_1sdp"
                 android:background="@color/textBlue"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clLoanCollectionData"
-                app:layout_constraintStart_toStartOf="parent"
+            <!--Progress Bar-->
+            <ProgressBar
+                android:id="@+id/loadingProgressBar"
+                style="@style/CustomProgressDialog"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:indeterminate="true"
+                android:visibility="invisible"
+               app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/viewBorder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/txtName"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="Sairaj Naidu"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="parent"
-                   app:layout_constraintTop_toTopOf="parent"/>
-
-
-                <TextView
-                    android:id="@+id/txtScheduledTime1"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:text="@string/Scheduled_Time"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@id/txtName"
-                    app:layout_constraintTop_toBottomOf="@id/txtName" />
-
-                <ImageView
-                    android:id="@+id/ivCall"
-                    android:layout_width="@dimen/_18sdp"
-                    android:layout_height="@dimen/_16sdp"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:src="@drawable/wifi_call"
-                    android:visibility="invisible"
-                    app:layout_constraintStart_toEndOf="@id/txtScheduledTime1"
-                    app:layout_constraintTop_toTopOf="@id/txtScheduledTime1" />
-
-
-                <TextView
-                    android:id="@+id/txtLocation"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginEnd="@dimen/_50sdp"
-                    android:text="Siddapur"
-                    android:textStyle="normal"
-                    app:layout_constraintEnd_toStartOf="@+id/txtDistance"
-                   app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:text="@string/AttemptNo"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@id/txtLocation"
-                    app:layout_constraintTop_toBottomOf="@id/txtLocation" />
-
-                <TextView
-                    android:id="@+id/txtDistance"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="3km"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@id/txtDPD"
-                   app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/ivMap1"
-                    android:layout_width="@dimen/_18sdp"
-                    android:layout_height="@dimen/_16sdp"
-                    android:src="@drawable/location"
-                    app:layout_constraintEnd_toEndOf="@id/txtDPD"
-                    app:layout_constraintTop_toTopOf="@id/txtDistance"
-                    app:tint="@color/red" />
-
-
-                <TextView
-                    android:id="@+id/txtDPD"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:text="DPD 1-30"
-                    android:visibility="invisible"
-                    android:textStyle="normal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txtDistance" />
-
-                <View
-                    android:id="@+id/view1"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_1sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:background="@color/textBlue"
-                    app:layout_constraintTop_toBottomOf="@id/txtScheduledTime1" />
-
-
-                <TextView
-                    android:id="@+id/txtName2"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="Naidu Sairaj"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/view1" />
-
-
-                <TextView
-                    android:id="@+id/txtScheduledTime2"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:text="@string/Scheduled_Time"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@id/txtName2"
-                    app:layout_constraintTop_toBottomOf="@id/txtName2" />
-
-                <ImageView
-                    android:id="@+id/ivCall2"
-                    android:layout_width="@dimen/_18sdp"
-                    android:layout_height="@dimen/_16sdp"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:src="@drawable/wifi_call"
-                    android:visibility="invisible"
-                    app:layout_constraintStart_toEndOf="@id/txtScheduledTime2"
-                    app:layout_constraintTop_toTopOf="@id/txtScheduledTime2" />
-
-                <TextView
-                    android:id="@+id/txtLocation2"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginEnd="@dimen/_50sdp"
-                    android:text="Tumkur"
-                    android:textStyle="normal"
-                    app:layout_constraintEnd_toStartOf="@+id/txtDistance"
-                    app:layout_constraintTop_toBottomOf="@id/view1" />
-
-                <TextView
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:text="@string/AttemptNo"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@id/txtLocation2"
-                    app:layout_constraintTop_toBottomOf="@id/txtLocation2" />
-
-                <TextView
-                    android:id="@+id/txtDistance2"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="8km"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="@id/txtDPD2"
-                    app:layout_constraintTop_toBottomOf="@id/view1" />
-
-                <ImageView
-                    android:id="@+id/ivMap2"
-                    android:src="@drawable/location"
-                    app:layout_constraintTop_toTopOf="@id/txtDistance2"
-                    app:layout_constraintEnd_toEndOf="@id/txtDPD2"
-                    android:layout_width="@dimen/_18sdp"
-                    android:layout_height="@dimen/_16sdp"
-                    app:tint="@color/red" />
-
-
-                <TextView
-                    android:id="@+id/txtDPD2"
-                    style="@style/common_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:text="DPD 1-30"
-                    android:visibility="invisible"
-                    android:textStyle="normal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txtDistance2" />
-
-                <View
-                    android:id="@+id/view2"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_1sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:background="@color/textBlue"
-                    app:layout_constraintTop_toBottomOf="@id/txtScheduledTime2" />
-
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
+             app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvLoanCollection"
-                app:layout_constraintTop_toBottomOf="@id/clLoanCollectionData"
-                android:layout_marginTop="@dimen/_10sdp"
+                app:layout_constraintTop_toBottomOf="@id/viewBorder"
+                android:layout_marginTop="@dimen/_5sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
