Toolbar title textStyle changed to normal in activity_dpdactivity, activity_main_activity3_api, activity_loan_collection and on clicking Asked To Call Back Later in PaymentNotificationOfCustomerActivity redirected to ScheduleVisitForCollectionActivity and title will become Schedule Call and bottom button will become Update

--- a/app/src/main/res/layout/activity_loan_collection.xml
+++ b/app/src/main/res/layout/activity_loan_collection.xml
@@ -48,7 +48,7 @@
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_13ssp"
-                        android:textStyle="bold"
+                        android:textStyle="normal"
                         tools:text="Calling-Above 30 DPD" />
 
                 </androidx.appcompat.widget.Toolbar>
