--- a/app/src/main/res/layout/activity_main_activity3_api.xml
+++ b/app/src/main/res/layout/activity_main_activity3_api.xml
@@ -30,7 +30,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
         </androidx.appcompat.widget.Toolbar>
 
