--- a/app/src/main/res/layout/activity_dpdactivity.xml
+++ b/app/src/main/res/layout/activity_dpdactivity.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:id="@+id/labelDPDQueueToolbar"
                 android:text="@string/dpd_queue"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 android:textSize="@dimen/_13ssp"
@@ -58,7 +58,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:background="@drawable/round_corner_bg"
             android:backgroundTint="@color/white"
@@ -72,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:text="@string/dpd_queue"
                 android:textColor="@color/black"
@@ -85,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:text="@string/no_of_members"
                 android:textColor="@color/black"
@@ -98,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:text="@string/completed_calls"
                 android:textColor="@color/black"
@@ -111,8 +110,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:text="@string/pending_calls"
                 android:textColor="@color/black"
@@ -123,6 +122,8 @@
                 app:layout_constraintTop_toBottomOf="@id/labelNoOfMembers"
                 android:background="@color/textBlue"
                 app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"/>
@@ -149,7 +150,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvDPD"
             app:layout_constraintTop_toBottomOf="@id/clDPD"
-            android:layout_marginTop="@dimen/_10sdp"
+
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
