PaymentInfoOfCustomerActivity with activity_payment_info_of_customer3.xml with constraint layout

--- a/app/src/main/res/layout/activity_schedule_visit_for_collection.xml
+++ b/app/src/main/res/layout/activity_schedule_visit_for_collection.xml
@@ -80,6 +80,24 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
 
+                <!--This button will be displayed when coming from PaymentInfoOfCustomer-->
+                <Button
+                    android:id="@+id/btnWillPayLumpsum"
+                    style="@style/BigButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_80sdp"
+                    android:text="@string/will_pay_lumpsum"
+                    android:textStyle="normal"
+                    android:visibility="gone"
+                    android:backgroundTint="@color/brightOrange"
+                    app:layout_constraintTop_toBottomOf="@id/btnUpdateSchedule"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
